--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,41 @@ header {
     color: #fff;
 }
 
+.hamburger-menu {
+    display: none;
+    cursor: pointer;
+    flex-direction: column;
+    gap: 5px;
+    padding: 10px;
+}
+
+.hamburger-menu span {
+    display: block;
+    width: 25px;
+    height: 3px;
+    background-color: #333;
+}
+
+/* Show hamburger menu on smaller screens */
+@media screen and (max-width: 768px) {
+    .hamburger-menu {
+        display: flex;
+    }
+
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 100%;
+    }
+
+    /* When menu is active */
+    .nav-active {
+        display: flex;
+    }
+}
+
+
 .profile-pic {
     width: 150px; 
     height: 150px;
