--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,9 @@ header {
     height: 150px;
     border-radius: 50%; 
     border: 5px solid #007bff;
-    object-fit: cover; 
+    object-fit: cover;
+    margin-top: 30px;
+    margin-bottom: 30px; 
     margin-right: 30px;
 }
 
